<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="add_obs">+ Obs.</string>
    <string name="adicionar">Adicionar</string>
    <string name="aguarde">Aguarde</string>
    <string name="app_name">Mac Comanda</string>
    <string name="atencao">Atenção</string>
    <string name="cancelar">Cancelar</string>
    <string name="cartao">Cartão</string>
    <string name="cartao_invalido">Cartão inválido.</string>
    <string name="cod_atendente">Cód. Atendente</string>
    <string name="cod_produto">Cód. Produto</string>
    <string name="codigo_invalido">Código inválido.</string>
    <string name="comanda">Comanda</string>
    <string name="configuracoes">Configurações</string>
    <string name="confirmar">Confirmar</string>
    <string name="continuar">Continuar</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="descricao">Descrição</string>
    <string name="erro_login">Usuário ou senha inválidos.</string>
    <string name="falha_add_obs">"Falha ao adicionar obs!

"</string>
    <string name="finalizar">Finalizar</string>
    <string name="hello_world">Hello world!</string>
    <string name="ip_nome_servidor">IP ou Nome do Servidor</string>
    <string name="mesa">Mesa</string>
    <string name="numeral_um">1</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="numero_mesas">Nro. de Mesas</string>
    <string name="obs_para_item">Observaçao para este item</string>
    <string name="observacoes">Observações</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="primeiro_adicione_produto">Primeiro adicione o produto</string>
    <string name="processando">Processando...</string>
    <string name="senha">Senha</string>
    <string name="senha_invalida">Senha inválida.</string>
    <string name="sinal_mais">+</string>
    <string name="sinal_menos">-</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="title_activity_atendente">Atendente</string>
    <string name="title_activity_busca_produto">Busca de Produtos</string>
    <string name="title_activity_cartao">Mac Comanda</string>
    <string name="title_activity_comanda">Comanda</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="title_activity_mesa">Mesa</string>
    <string name="title_activity_produto">Produto</string>
    <string name="total">Total</string>
    <string name="um_x">1x</string>
    <string name="zero_moeda">0,00</string>
</resources>
