<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/png_fundo" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cod_produto" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <EditText android:id="@id/txtCodProduto" android:layout_width="120.0dip" android:layout_height="wrap_content" android:ems="10" android:selectAllOnFocus="true" android:layout_toLeftOf="@id/btnPesquisar" android:layout_below="@id/textView2" android:layout_alignParentLeft="true" android:inputType="number" />
    <TextView android:gravity="center_vertical" android:id="@id/lblDescricao" android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginTop="10.0dip" android:ems="10" android:selectAllOnFocus="true" android:layout_below="@id/txtCodProduto" android:layout_alignRight="@id/btnFinalizar" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="Quantidade" android:layout_below="@id/lblDescricao" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnDiminuir" android:background="@color/botao_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/sinal_menos" android:layout_toLeftOf="@id/lblQuantidade" android:layout_alignTop="@id/lblQuantidade" android:layout_alignBottom="@id/lblQuantidade" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnFinalizar" android:background="@color/botao_destaque" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/finalizar" android:layout_below="@id/btnAumentar" android:layout_alignParentRight="true" />
    <TextView android:gravity="center" android:id="@id/lblQuantidade" android:background="#ffcccccc" android:layout_width="120.0dip" android:layout_height="35.0dip" android:text="@string/numeral_um" android:ems="10" android:selectAllOnFocus="true" android:layout_below="@id/textView3" android:layout_centerHorizontal="true" android:inputType="text" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnAumentar" android:background="@color/botao_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/sinal_mais" android:layout_toRightOf="@id/lblQuantidade" android:layout_alignTop="@id/lblQuantidade" android:layout_alignBottom="@id/lblQuantidade" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnContinuar" android:background="@color/botao_normal" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/continuar" android:layout_alignTop="@id/btnFinalizar" android:layout_alignParentLeft="true" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnPesquisar" android:background="@color/botao_normal" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pesquisar" android:layout_above="@id/lblDescricao" android:layout_alignParentRight="true" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnAdicionarObs" android:background="@color/botao_normal" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_obs" android:layout_alignTop="@id/btnContinuar" android:layout_centerHorizontal="true" />
</RelativeLayout>
