<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/png_fundo" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/numero_cartao" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <EditText android:gravity="center" android:id="@id/txtCartao" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:selectAllOnFocus="true" android:layout_below="@id/textView" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_centerHorizontal="true" android:inputType="number" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnConfirmar" android:background="@color/botao_destaque" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirmar" android:layout_below="@id/txtCartao" android:layout_alignRight="@id/txtCartao" />
    <Button android:textColor="@color/fonte_botao_principal" android:id="@id/btnVerComanda" android:background="@color/botao_normal" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comanda" android:layout_below="@id/txtCartao" android:layout_alignParentLeft="true" />
</RelativeLayout>
